# next.js

./: .alexignore  .eslintrc.json  .gitattributes  .gitignore  .ignore  .prettierignore  .rustfmt.toml  AGENTS.md  Cargo.toml  conductor.json  contributing.md  eslint.cli.config.mjs  eslint.config.mjs  jest.config.js  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  run-tests.js  rust-toolchain.toml  skills-lock.json  tsconfig.json  turbo.json
crates/next-build-test/: Cargo.toml  nextConfig.json
crates/next-build-test/src/: lib.rs  main.rs
crates/next-code-frame/: Cargo.toml  README.md
crates/next-code-frame/benches/: code_frame_bench.rs
crates/next-code-frame/src/: frame.rs  highlight.rs  lib.rs  tests.rs
crates/next-custom-transforms/: Cargo.toml
crates/next-custom-transforms/src/: chain_transforms.rs  linter.rs  react_compiler.rs
crates/next-custom-transforms/src/transforms/: cjs_finder.rs  cjs_optimizer.rs  debug_fn_name.rs  debug_instant_stack.rs  dynamic.rs  empty_gsp.rs  import_analyzer.rs  middleware_dynamic.rs  mod.rs  named_import_transform.rs  next_ssg.rs  optimize_barrel.rs  optimize_server_react.rs  page_config.rs  pure.rs  react_server_components.rs  server_actions.rs  shake_exports.rs  strip_page_exports.rs  track_dynamic_imports.rs  warn_for_edge_runtime.rs
crates/next-custom-transforms/src/transforms/fonts/: find_functions_outside_module_scope.rs  font_functions_collector.rs  font_imports_generator.rs  mod.rs
crates/next-custom-transforms/tests/: errors.rs  fixture.rs  full.rs  telemetry.rs
crates/next-custom-transforms/tests/errors/use-cache-not-allowed/1/: output.stderr
crates/next-custom-transforms/tests/errors/use-cache-not-allowed/2/: output.stderr
crates/next-custom-transforms/tests/fixture/debug-instant-stack/with-aliased-export/: input.js  output.js  output.map
crates/next-custom-transforms/tests/fixture/debug-instant-stack/with-indirect-export/: input.js  output.js  output.map
crates/next-custom-transforms/tests/fixture/debug-instant-stack/with-instant/: input.js  output.js  output.map
crates/next-custom-transforms/tests/fixture/debug-instant-stack/with-named-export/: input.js  output.js  output.map
crates/next-custom-transforms/tests/fixture/debug-instant-stack/with-reexport/: input.js  output.js  output.map
crates/next-custom-transforms/tests/fixture/debug-instant-stack/without-instant/: input.js  output.js  output.map
crates/next-custom-transforms/tests/fixture/empty-gsp/aliased-export/: input.js  output.js  output.map
crates/next-custom-transforms/tests/fixture/server-actions/: next.d.ts  tsconfig.json
crates/next-custom-transforms/tests/fixture/track-dynamic-imports/: tsconfig.json
crates/next-custom-transforms/tests/loader/auto-cjs/1/: output.js
crates/next-custom-transforms/tests/loader/issue-30389/: output.js
crates/next-custom-transforms/tests/loader/issue-32553/: output.js
crates/next-custom-transforms/tests/loader/issue-40231/: output.js
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  mdx.rs
test/e2e/swc-plugins-env/plugin/: Cargo.toml
test/e2e/swc-plugins-env/plugin/src/: lib.rs
turbopack/crates/turbo-esregex/: Cargo.toml
turbopack/crates/turbo-esregex/src/: lib.rs
turbopack/crates/turbo-persistence/: Cargo.toml  README.md
turbopack/crates/turbo-persistence/benches/: mod.rs
turbopack/crates/turbo-persistence/src/: arc_bytes.rs  arc_slice.rs  collector.rs  collector_entry.rs  compression.rs  constants.rs  db.rs  key.rs  lib.rs  lookup_entry.rs  merge_iter.rs  meta_file.rs  meta_file_builder.rs  mmap_helper.rs  sst_filter.rs  static_sorted_file.rs  static_sorted_file_builder.rs  tests.rs  value_block_count_tracker.rs  value_buf.rs  write_batch.rs
turbopack/crates/turbo-persistence/src/compaction/: selector.rs
turbopack/crates/turbo-tasks-hash/: Cargo.toml
turbopack/crates/turbo-tasks-hash/src/: deterministic_hash.rs  hex.rs  lib.rs  sha.rs  xxh3_hash128.rs  xxh3_hash64.rs
turbopack/crates/turbo-tasks-malloc/: Cargo.toml
turbopack/crates/turbo-tasks-malloc/src/: lib.rs
turbopack/crates/turbopack/: Cargo.toml
turbopack/crates/turbopack-cli-utils/: Cargo.toml
turbopack/crates/turbopack-cli-utils/src/: issue.rs  lib.rs  runtime_entry.rs
turbopack/crates/turbopack-ecmascript-plugins/: Cargo.toml
turbopack/crates/turbopack-ecmascript-plugins/src/transform/: emotion.rs  mod.rs  modularize_imports.rs  relay.rs  styled_components.rs  styled_jsx.rs  swc_ecma_transform_plugins.rs
turbopack/crates/turbopack-node/: Cargo.toml  build.rs
turbopack/crates/turbopack-node/js/: tsconfig.json
turbopack/crates/turbopack-node/js/src/: error.ts  types.ts
turbopack/crates/turbopack-node/src/: available_parallelism.rs  evaluate.rs  execution_context.rs  format.rs  lib.rs  node_entry.rs  pool.rs  pool_stats.rs  process_pool.rs
turbopack/crates/turbopack-node/src/pool/: web_worker_pool.rs
turbopack/crates/turbopack-node/src/process_pool/: mod.rs
turbopack/crates/turbopack-node/src/render/: error.html  node_api_source.rs
turbopack/crates/turbopack-node/src/source_map/: mod.rs
turbopack/crates/turbopack-node/src/transforms/: browser_postcss.rs  mod.rs  postcss.rs  postcss_webworker.rs  util.rs  webpack.rs  webpack_webworker.rs
turbopack/crates/turbopack-node/src/worker_pool/: mod.rs  operation.rs  web_worker.rs  worker_thread.rs
turbopack/crates/turbopack-node/tests/: pool.rs  pool_test_broken_worker.js  pool_test_worker.js  test_config.trs
turbopack/crates/turbopack/benches/: node_file_trace.rs
turbopack/crates/turbopack/examples/: turbopack.rs
turbopack/crates/turbopack/src/: evaluate_context.rs  global_module_ids.rs  lib.rs  runtime_asset_context.rs
turbopack/crates/turbopack/src/graph/: mod.rs
turbopack/crates/turbopack/src/module_options/: match_mode.rs  mod.rs  module_options_context.rs  module_rule.rs  rule_condition.rs  transition_rule.rs
turbopack/crates/turbopack/src/transition/: mod.rs
turbopack/crates/turbopack/tests/: node-file-trace.rs
turbopack/crates/turbopack/tests/node-file-trace/: package.json  pnpm-lock.yaml
(+4269 files in other folders)
