[package]
name = "turbo-esregex"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
regex = { workspace = true }
regress = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
turbo-tasks = { workspace = true }


[lints]
workspace = true
