[package]
name = "turbo-tasks-hash"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
data-encoding = { workspace = true }
smallvec = { workspace = true }
sha2 = { workspace = true }
turbo-tasks-macros = { workspace = true }
xxhash-rust = { workspace = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
