[package]
name        = "turbo-tasks-malloc"
version     = "0.1.0"
edition     = "2024"
description = "A wrapper around mimalloc or the system allocator that tracks allocations"
license     = "MIT"
autobenches = false

[lib]
bench = false

[dependencies]

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
mimalloc = { version = "0.1.48", features = [
  "extended",
  "local_dynamic_tls",
  "v3",
], optional = true }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
mimalloc = { version = "0.1.48", features = [
  "extended",
  "v3",
], optional = true }

[target.'cfg(not(any(target_os = "linux", target_family = "wasm")))'.dependencies]
mimalloc = { version = "0.1.48", features = [
  "extended",
  "v3",
], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libmimalloc-sys = { version = "0.1.44", features = [
  "extended",
], optional = true }

[features]
default          = ["custom_allocator"]
custom_allocator = ["dep:libmimalloc-sys", "dep:mimalloc"]
