[package]
name        = "turbo-tasks-malloc"
version     = "0.1.0"
edition     = "2024"
description = "A wrapper around mimalloc or the system allocator that tracks allocations"
license     = "MIT"
autobenches = false

[lib]
bench = false

[dependencies]
libmimalloc-sys = { version = "0.1.44", features = [
  "extended",
], optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1.48", features = [
  "extended",
  "v3",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1.48", features = [
  "extended",
  "local_dynamic_tls",
  "v3",
], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_System_SystemInformation"] }

[features]
default          = ["custom_allocator"]
custom_allocator = ["dep:libmimalloc-sys", "dep:mimalloc"]
