[package]
name = "turbopack-cli-utils"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"
autobenches = false

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
owo-colors = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbopack-core = { workspace = true }
turbopack-resolve = { workspace = true }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
crossterm = "0.29.0"
