[package]
name = "turbopack-ecmascript-plugins"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"
autobenches = false

[lib]
bench = false

[features]
transform_emotion = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
either = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }

turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbopack-core = { workspace = true }
turbopack-ecmascript = { workspace = true }

styled_components = { workspace = true }
styled_jsx = { workspace = true }
swc_core = { workspace = true, features = [
  "ecma_ast",
  "ecma_visit",
  "common",
] }
swc_emotion = { workspace = true }
swc_relay = { workspace = true }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
swc_core = { workspace = true, features = [
  "__plugin_transform_host",
  "__plugin_transform_host_schema_v1",
] }
swc_plugin_backend_wasmtime = { workspace = true }
