[package]
name = "turbopack-node"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"
autobenches = false

[lib]
bench = false

[features]
default = ["worker_thread"]
# enable "HMR" for embedded assets
dynamic_embed_contents = ["turbo-tasks-fs/dynamic_embed_contents"]
child_process = ["tokio"]
worker_thread = ["napi", "napi-derive"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.4"
async-trait = { workspace = true }
async-channel = "2.5.0"
dashmap = { workspace = true }
base64 = "0.21.0"
const_format = { workspace = true }
either = { workspace = true, features = ["serde"] }
futures = { workspace = true }
futures-retry = { workspace = true }
indoc = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
tokio = { workspace = true, optional = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
napi = { workspace = true, optional = true, features = ["anyhow"] }
napi-derive = { workspace = true, optional = true }
tracing = { workspace = true }
turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-bytes = { workspace = true }
turbo-tasks-env = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbopack-cli-utils = { workspace = true }
turbopack-core = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-resolve = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
