[package]
name = "turbopack"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"
autobenches = false

[features]
test_persistent_cache = []

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
either = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

turbo-rcstr = { workspace = true }
turbo-esregex = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-env = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-tasks-hash = { workspace = true }
turbopack-core = { workspace = true }
turbopack-css = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-ecmascript-runtime = { workspace = true }
turbopack-env = { workspace = true }
turbopack-mdx = { workspace = true }
turbopack-node = { workspace = true, default-features = false }
turbopack-resolve = { workspace = true }
turbopack-static = { workspace = true }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
turbopack-wasm = { workspace = true }

[dev-dependencies]
turbo-tasks-backend = { workspace = true }
